...
              child: DragToMoveArea(
                child: Row(
                  children: [
                    Image.asset("app_icon.ico", width: 20, height: 20),
                    const SizedBox(width: 8.0),
                    Text(
                      "Coriander Player",
                      style: TextStyle(color: scheme.onSurface, fontSize: 14),
                    ),
                  ],
                ),
              ),
            ),
...
class _TitleBarSearchBtn extends StatelessWidget {
  const _TitleBarSearchBtn();

  @override
  Widget build(BuildContext context) {
    return IconButton(
      tooltip: "搜索",
      onPressed: () => context.go(app_paths.SEARCH_PAGE),
      icon: const Icon(Symbols.search),
    );
  }
}

...
  @override
  Widget build(BuildContext context) {
    return Wrap(
      spacing: 8.0,
      children: [
        IconButton(
          tooltip: _isFullScreen ? "退出全屏" : "全屏",
          onPressed: _isProcessing ? null : _toggleFullScreen,
          icon: Icon(
            _isFullScreen ? Symbols.close_fullscreen : Symbols.open_in_full,
          ),
        ),
        IconButton(
          tooltip: "最小化",
          onPressed: windowManager.minimize,
          icon: const Icon(Symbols.remove),
        ),
        IconButton(
          tooltip: _isFullScreen ? "全屏模式下不可用" : (_isMaximized ? "还原" : "最大化"),
          onPressed: _isFullScreen || _isProcessing ? null : _toggleMaximized,
          icon: Icon(
            _isMaximized ? Symbols.fullscreen_exit : Symbols.fullscreen,
          ),
        ),
        IconButton(
          tooltip: "关闭",
          onPressed: () async {
            if (AppSettings.instance.closeToTray) {
              await savePlaylists();
              await saveLyricSources();
              await AppSettings.instance.saveSettings();
              await AppPreference.instance.save();
...
